# voiceops-lab

./: .env.example  .gitignore  DEPLOY.md  README.md
.github/workflows/: ci.yml  deploy.yml
agent/: .env.example  Dockerfile  README.md  agent.py  audit_chain.py  livekit.toml  persistence.py  requirements.txt
auth-server/: .dockerignore  .env.example  Dockerfile  README.md  auth.mjs  fly.toml  migrate.mjs  package-lock.json  package.json  promote-reviewers-admin.mjs  provision-reviewers.mjs  provision.mjs  seed-admin.mjs  server.mjs  team-add-reviewers.mjs
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  fly.toml  pyproject.toml
backend/app/: __init__.py  config.py  db.py  main.py
backend/app/agent/: context_graph.py  dispatch.py  engine.py  live_bridge.py  notes.py  orchestrator.py  personas.py  prediction.py  reasoning.py  run_store.py  tools.py
backend/app/agent/graph/: __init__.py  engine.py  state.py  subagents.py
backend/app/audit/: ledger.py
backend/app/core/: format.py  hash.py  logging.py
backend/app/llm/: local_llm.py
backend/app/observability/: __init__.py  tracing.py
backend/app/packs/: __init__.py  banking.py  base.py  custom.py  custom_store.py  generic.py  healthcare.py  registry.py  telecom.py
backend/app/providers/: _openai_compatible.py  base.py  demo.py  mlx.py  openrouter.py  registry.py  router.py
backend/app/routers/: _deps.py  agent.py  analytics.py  calls.py  health.py  providers.py  scenarios.py  seed.py  telephony.py  voice.py
backend/app/schemas/: __init__.py  agent.py  audit.py  providers.py  simulation.py
backend/app/simulation/: scenarios.py
backend/app/voice/: elevenlabs.py  livekit.py  registry.py  twilio.py  types.py  vercel.py
backend/migrations/: env.py
backend/migrations/versions/: 0001_initial_schema.py  0002_event_stream.py  0003_custom_scenarios.py  0004_analytics_indexes.py  0005_prediction_learner_stats.py
backend/scripts/: setup_db.py  train_anticipation.py
backend/tests/: conftest.py  test_api.py  test_calls.py  test_context_graph.py  test_custom_scenarios.py  test_graph_engine.py  test_hash.py  test_live_bridge.py  test_llm_extract.py  test_models.py  test_notes.py  test_prediction.py  test_providers.py  test_reasoning.py  test_roleplay.py  test_seed.py  test_subagent.py  test_tools.py
web/: .env.example  .gitignore  README.md  eslint.config.mjs  index.html  package-lock.json  package.json  playwright.config.ts  postcss.config.mjs  tailwind.config.ts  tsconfig.json  vercel.json  vite.config.ts  vitest.config.ts
web/e2e/: cockpit.spec.ts
web/scripts/: auth-shot.mjs  render-diagram.mjs  shots.mjs
web/src/: globals.css  main.tsx  router.tsx  vite-env.d.ts
web/src/components/: AmbientBackground.tsx  AnalyticsView.tsx  AppSidebar.tsx  AuditLedger.tsx  AuditView.tsx  AuthScreen.tsx  BenchmarkView.tsx  CallControls.tsx  CallHistoryView.tsx  CockpitView.tsx  CommandPalette.tsx  ContextGraphView.tsx  HomeView.tsx  LogsView.tsx  ModelRouterBar.tsx  ModelsView.tsx  PreConfigView.tsx  PredictionTree.tsx  PredictivePanel.tsx  ProjectSwitcher.tsx  ProviderLogo.tsx  RoleCard.tsx  (+13 more)
(+85 files in other folders)
