[project]
name = "voiceops-backend"
version = "0.1.0"
description = "VoiceOps Lab — standalone FastAPI backend (real local-model healthcare voice-agent runtime)."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.138",
    "uvicorn[standard]>=0.49",
    "asyncpg>=0.31",
    "httpx>=0.28",
    "pydantic>=2.13",
    "pydantic-settings>=2.14",
    "sentry-sdk>=2.63",
    "alembic>=1.18",
    "sqlalchemy[asyncio]>=2.0",
    "livekit-api>=1.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.1",
    "pytest-asyncio>=1.4",
    "anyio>=4.14",
    "ruff>=0.15",
    "pip-audit>=2.9",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
