[project]
name = "voiceops-backend"
version = "0.1.0"
description = "VoiceOps Lab — standalone FastAPI backend (real local-model healthcare voice-agent runtime)."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "asyncpg>=0.29",
    "httpx>=0.27",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "sentry-sdk>=2.0",
    "alembic>=1.13",
    "sqlalchemy[asyncio]>=2.0",
    "livekit-api>=0.8",
    # Agent orchestration (StateGraph engine) + LLM observability. langgraph
    # gives us the typed turn loop, conditional routing, checkpointing and native
    # human-in-the-loop interrupts; langfuse traces every inference. Both degrade
    # to no-ops when unconfigured so the local-first runtime still works offline.
    "langgraph>=0.2.60",
    "langfuse>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "anyio>=4.4",
    "ruff>=0.14",
    "pip-audit>=2.9",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
